Fixed gap between blocks in a grid-section.

--- a/public/assets/css/tkgreen/main.css
+++ b/public/assets/css/tkgreen/main.css
@@ -275,8 +275,7 @@ a:hover, a:focus {
 
 .grid-section {
   grid-template-columns: 0.5em auto 0.5em;
-  row-gap: 3em;
-  column-gap: 1em;
+  gap: 1em;
 }
 .grid-section > * {
   width: min(100%, 60rem);
